--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <payara.password></payara.password>
         <payara.hostname>localhost</payara.hostname>
         <payara.domainName>domain1</payara.domainName>
-        <payara.home>C:/payara5</payara.home>
+        <payara.home>/home/aaron/payara5</payara.home>
         <payara.domainDir>${payara.home}/glassfish/domains</payara.domainDir>
 
     </properties>
@@ -113,11 +113,11 @@
                     <container>
                         <containerId>glassfish5x</containerId>
                         <type>installed</type>
-                        <home>C:/payara5</home>
+                        <home>${payara.home}</home>
                     </container>
                     <configuration>
                         <type>existing</type>
-                        <home>C:/payara5/glassfish/domains</home>  
+                        <home>${payara.domainDir}</home>  
                                 
                         <properties>
                             <cargo.glassfish.domain.name>domain1</cargo.glassfish.domain.name>
@@ -161,141 +161,3 @@
 
 </project>
 
-
-<!--
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>edu.strobl</groupId>
-    <artifactId>moodymonday</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
-    
-    
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-    </properties>
-    
-    
-    <dependencies>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>2.7.2</version>
-            <scope>provided</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>8.0</version>
-            <scope>provided</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.2.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>1.2.0</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>2.21.0</version>
-            <scope>test</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.11.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.11.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-web</artifactId>
-            <version>2.11.1</version>
-        </dependency>
-    </dependencies>
-    
-    <build>
-        <finalName>moodymonday</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <inherited>true</inherited>
-                <version>1.6.9</version>
-                <executions>
-                    <execution>
-                        <id>deploy</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>redeploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <container>
-                        <containerId>glassfish4x</containerId>
-                        <type>installed</type>
-                        <home>C:/glassfish5</home>
-                    </container>
-                    <configuration>
-                        <type>existing</type>
-                        <home>C:/glassfish5/glassfish/domains</home>
-                        <properties>
-                            <cargo.glassfish.domain.name>domain1</cargo.glassfish.domain.name>
-                            
-                            <cargo.remote.password></cargo.remote.password>
-                        </properties>
-                    </configuration>
-                </configuration>
-            </plugin>
-            <plugin>            
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>        
-                </configuration>
-                <version>3.2.2</version>
-            </plugin>
-            
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.2.0</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
-    </build>
-    
-    
-</project>
-
--->
